--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header>
 </app-header>
-<app-body class="container  mb-5">
-</app-body>
+<div>
+    <router-outlet class="container"></router-outlet>
+</div>
 <app-footer></app-footer>
